--- a/.github/workflows/codeflash.yml
+++ b/.github/workflows/codeflash.yml
@@ -17,17 +17,11 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11.6
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-          poetry install
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+  
+      - name: Install CodeFlash
+        run: uv tool install codeflash
+
       - name: Run CodeFlash to optimize code
-        id: optimize_code
-        run: |
-          poetry env use python 
-          poetry run codeflash --test-framework unittest --test-root code_to_optimize/tests/unittest
+        run: uvx codeflash
